sobre un teléfono de 520px, el color de  fondo debe cambiar y también el tamaño de la letra.
Punto 9 del trabajo grupal: sobre un teléfono de 520px, el color de  fondo debe cambiar y también el tamaño de la letra.

--- a/testpgw.html
+++ b/testpgw.html
@@ -16,6 +16,7 @@
             gap: 5px;
             background-color: white
             box-sizing: border-box;
+
         }
         .container > div {
             background-color: lightgreen;
@@ -45,6 +46,14 @@
             border-radius: 5px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
         }
+
+        @media screen and (max-width: 520px) {
+        body {
+            background-color: lightblue;
+            font-size: 24px;
+        }
+        }
+    
     </style>
     <meta charset="UTF-8" />
     <title>title</title>
@@ -73,6 +82,9 @@
          </div>
          <div class="footer" class="ac"><h4>Footer</h4></div>
     </div>
+
+
+    
 
     <script>
         function mostrarMision() {
