Se añade el favicon a testpgw

--- a/testpgw.html
+++ b/testpgw.html
@@ -53,10 +53,15 @@
             font-size: 24px;
         }
         }
+
+
     
     </style>
     <meta charset="UTF-8" />
     <title>title</title>
+
+    <link rel="shortcut icon" href="logoaula.png" /> 
+
 </head>
 <body>
     <div class="container">
