--- a/mosaico.html
+++ b/mosaico.html
@@ -8,24 +8,47 @@
     <style>
 
         .container-fluid{
-            background-color: white;
             height: 100vh;
 
 
         }
 
         .row>div{
-            background-color: lightgreen;
+            background-color: lightblue;
             padding: 10px;
             border: 2px solid black;
 
         }
+
+        #encabezado-videos{
+            background-color: white;
+            border: 2px solid black;
+        }
+
+
+        #encabezado-audios{
+            background-color: white;
+            border: 2px solid black;
+        }
+
+
+
 
     </style>
 </head>
 <body>
 
     <div class="container-fluid">
+
+        <div class="row" >      
+
+            <div class="col-md-12" id="encabezado-videos">
+
+                <h1 class="text-center">Mosaico de Videos</h1>
+
+            </div> 
+
+        </div>
 
         <div class="row">
 
@@ -73,6 +96,17 @@
                 <iframe width="420" height="315"src="https://www.youtube.com/embed/tgbNymZ7vqY">
                 </iframe>     
             </div>
+
+        </div>
+
+
+        <div class="row" id="encabezado-videos">      
+
+            <div class="col-md-12">
+
+                <h1 class="text-center">Mosaico de musica</h1>
+
+            </div> 
 
         </div>
 
