--- a/mosaico.html
+++ b/mosaico.html
@@ -100,7 +100,7 @@
         </div>
 
 
-        <div class="row" id="encabezado-videos">      
+        <div class="row" id="encabezado-audios">      
 
             <div class="col-md-12">
 
@@ -109,6 +109,61 @@
             </div> 
 
         </div>
+
+
+        <div class="row">
+
+            <div class="col-md-4">  
+                <iframe width="420" height="315"src="audio.mp3">
+                </iframe>     
+            </div>
+            <div class="col-md-4">  
+                <iframe width="420" height="315"src="audio.mp3">
+                </iframe>     
+            </div>
+            <div class="col-md-4">  
+                <iframe width="420" height="315"src="audio.mp3">
+                </iframe>     
+            </div>
+
+        </div>
+
+        <div class="row">
+
+            <div class="col-md-4">  
+                <iframe width="420" height="315"src="audio.mp3">
+                </iframe>     
+            </div>
+            <div class="col-md-4">  
+                <iframe width="420" height="315"src="audio.mp3">
+                </iframe>     
+            </div>
+            <div class="col-md-4">  
+                <iframe width="420" height="315"src="audio.mp3">
+                </iframe>     
+            </div>
+
+        </div>
+
+
+
+        <div class="row">
+
+            <div class="col-md-4">  
+                <iframe width="420" height="315"src="audio.mp3">
+                </iframe>     
+            </div>
+            <div class="col-md-4">  
+                <iframe width="420" height="315"src="audio.mp3">
+                </iframe>     
+            </div>
+            <div class="col-md-4">  
+                <iframe width="420" height="315"src="audio.mp3">
+                </iframe>     
+            </div>
+
+        </div>
+
 
     </div>
 
