--- a/mosaico.html
+++ b/mosaico.html
@@ -23,6 +23,7 @@
         #encabezado-videos{
             background-color: white;
             border: 2px solid black;
+
         }
 
 
@@ -52,15 +53,19 @@
 
         <div class="row">
 
-            <div class="col-md-4">  <iframe width="420" height="315"
+            <div class="col-md-4">  
+                <p>video 1</p>
+                <iframe width="420" height="315"
                 src="https://www.youtube.com/embed/tgbNymZ7vqY">
                 </iframe>  
             </div>
-            <div class="col-md-4">   
+            <div class="col-md-4">  
+                <p>video 2</p> 
                 <iframe width="420" height="315"src="https://www.youtube.com/embed/tgbNymZ7vqY">
                 </iframe>    
             </div>
-            <div class="col-md-4">    
+            <div class="col-md-4">   
+                <p>video 3</p> 
                 <iframe width="420" height="315"src="https://www.youtube.com/embed/tgbNymZ7vqY">
                 </iframe> 
             </div>
@@ -69,30 +74,36 @@
         <div class="row">
 
             <div class="col-md-4">  
+                <p>video 4</p>
                 <iframe width="420" height="315"src="https://www.youtube.com/embed/tgbNymZ7vqY">
                 </iframe>     
             </div>
             <div class="col-md-4">  
+                <p>video 5</p>
                 <iframe width="420" height="315"src="https://www.youtube.com/embed/tgbNymZ7vqY">
                 </iframe>     
             </div>
-            <div class="col-md-4">  
-                <iframe width="420" height="315"src="https://www.youtube.com/embed/tgbNymZ7vqY">
+            <div class="col-md-4"> 
+                <p>video 6</p>
+                <iframe width="420" height="315"src="https://www.youtube.com/embed/tgbNymZ7vqY" padding=auto>
                 </iframe>     
             </div>
 
         </div>
         <div class="row">
 
-            <div class="col-md-4">  
+            <div class="col-md-4">
+                <p>video 7</p> 
                 <iframe width="420" height="315"src="https://www.youtube.com/embed/tgbNymZ7vqY">
                 </iframe>     
             </div>
-            <div class="col-md-4">  
+            <div class="col-md-4"> 
+                <p>video 8</p> 
                 <iframe width="420" height="315"src="https://www.youtube.com/embed/tgbNymZ7vqY">
                 </iframe>     
             </div>
-            <div class="col-md-4">  
+            <div class="col-md-4">
+                <p>video 9</p>  
                 <iframe width="420" height="315"src="https://www.youtube.com/embed/tgbNymZ7vqY">
                 </iframe>     
             </div>
@@ -104,7 +115,7 @@
 
             <div class="col-md-12">
 
-                <h1 class="text-center">Mosaico de musica</h1>
+                <h1 class="text-center" >Mosaico de musica</h1>
 
             </div> 
 
@@ -114,14 +125,17 @@
         <div class="row">
 
             <div class="col-md-4">  
+                <p>Audio efecto de fuego para peliculas</p>
                 <iframe width="420" height="315"src="audio.mp3">
                 </iframe>     
             </div>
             <div class="col-md-4">  
+                <p>Audio efecto de fuego para peliculas</p>
                 <iframe width="420" height="315"src="audio.mp3">
                 </iframe>     
             </div>
-            <div class="col-md-4">  
+            <div class="col-md-4"> 
+                <p>Audio efecto de fuego para peliculas</p> 
                 <iframe width="420" height="315"src="audio.mp3">
                 </iframe>     
             </div>
@@ -130,15 +144,18 @@
 
         <div class="row">
 
-            <div class="col-md-4">  
+            <div class="col-md-4">
+                <p>Audio efecto de fuego para peliculas</p>  
                 <iframe width="420" height="315"src="audio.mp3">
                 </iframe>     
             </div>
             <div class="col-md-4">  
+                <p>Audio efecto de fuego para peliculas</p>
                 <iframe width="420" height="315"src="audio.mp3">
                 </iframe>     
             </div>
             <div class="col-md-4">  
+                <p>Audio efecto de fuego para peliculas</p>
                 <iframe width="420" height="315"src="audio.mp3">
                 </iframe>     
             </div>
@@ -149,15 +166,18 @@
 
         <div class="row">
 
-            <div class="col-md-4">  
+            <div class="col-md-4"> 
+                <p>Audio efecto de fuego para peliculas</p> 
                 <iframe width="420" height="315"src="audio.mp3">
                 </iframe>     
             </div>
-            <div class="col-md-4">  
+            <div class="col-md-4"> 
+                <p>Audio efecto de fuego para peliculas</p> 
                 <iframe width="420" height="315"src="audio.mp3">
                 </iframe>     
             </div>
-            <div class="col-md-4">  
+            <div class="col-md-4">
+                <p>Audio efecto de fuego para peliculas</p>  
                 <iframe width="420" height="315"src="audio.mp3">
                 </iframe>     
             </div>
